[package]
name = "zathura-markdown-rs"
version = "0.1.0"
authors = ["Hilmar Gústafsson <hilmargustafs@gmail.com>"]
edition = "2018"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
zathura-plugin = "0.4.0"
cairo-rs = "0.6.0"
pulldown-cmark = { version = "0.7", default-features = false, features = ["simd"] }
pangocairo = "0.7.0"
pango = "0.6.0"
